--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "course asynchronism in javascript",
   "main": "src/index.js",
   "scripts": {
-    "callback": "node src/callback/index.js"
+    "callback": "node src/callback/index.js",
+    "callback:challenge": "node src/callback/challenge.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/santiagobr/course-asynchronism-javascript/issues"
   },
-  "homepage": "https://github.com/santiagobr/course-asynchronism-javascript#readme"
+  "homepage": "https://github.com/santiagobr/course-asynchronism-javascript#readme",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
